# bare-sdl

./: CMakeLists.txt  README.md  binding.c  binding.cc  bug.js  index.js  package.json  test.js
.github/actions/virtual-audio-device/: README.md  action.yml
.github/actions/virtual-audio-device/linux/: setup_sound.sh
.github/actions/virtual-audio-device/macos/: setup_sound.sh
.github/actions/virtual-audio-device/windows/: setup_sound.ps1
.github/workflows/: prebuild.yml  test.yml
example/: av-playback.js  package.json  video-playback.js
examples/: audio-device-list.js  camera-list.js  camera-sdl-capture-and-playback.js  camera-sdl-device-list-ffmpeg-capture.js  package.json  record-audio-stream.js  record-audio.js  tone-playback.js  video-playback.js
lib/: audio-device.js  audio-stream.js  audio.js  camera.js  constants.js  event.js  poller.js  rect.js  reference-counted.js  renderer.js  texture.js  window.js
test/: audio-device.js  audio-stream.js  audio.js  camera.js  event.js  poller.js  rect.js  renderer.js  texture.js  window.js
test/helpers/: index.js
